manifests/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  selector:
    app: paperless
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-postgres
  namespace: paperless
  labels:
    app: paperless-postgres
spec:
  selector:
    app: paperless-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
  namespace: paperless
  labels:
    app: paperless-redis
spec:
  selector:
    app: paperless-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-gotenberg
  namespace: paperless
  labels:
    app: paperless-gotenberg
spec:
  selector:
    app: paperless-gotenberg
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
  namespace: paperless
  labels:
    app: paperless-tika
spec:
  selector:
    app: paperless-tika
  ports:
    - port: 9998
      targetPort: 9998
      protocol: TCP
